--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   
 
 <!-- Start of Navbar -->
-<nav class="navbar navbar-expand-md  navbar-expand-lg fixed-top" >
+<nav class="navbar navbar-expand-md  fixed-top" >
   <div class="container-fluid">
-    <h1 class="navbar-brand  fs-2" style="color:lawngreen;">𝓝𝓪𝓿𝓮𝓮𝓷💚</h1>
+    <h1 class="navbar-brand  fs-3" style="color:lawngreen;">𝓝𝓪𝓿𝓮𝓮𝓷💚</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class=" "> <img src="./Icons/icons8-three-dots-30.png" alt=""> </span>
     </button>
