--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
   <div class="container-fluid">
     <h1 class="navbar-brand  fs-3" style="color:lawngreen;">𝓝𝓪𝓿𝓮𝓮𝓷💚</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class=" "> <img src="./Icons/icons8-three-dots-30.png" alt=""> </span>
+     <span style="color:lawngreen;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+        <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
+      </svg> </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
 
