--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
         <h1 class="iam ms-3"> <span id="iam2">I'm </span><span class="multiText"></span> </h1>
         <h1 class="hello ms-3 " style="color:lawngreen;">Let Me Introduce Myself✌🏻</h1>
         <ul >
-            <li > <p class=" ms-3 me-3">⭐I fell in love with programming and I have at least learnt something....</p></li>
-            <li > <p class=" ms-3 me-3">⭐I am fluent in classics like C, Javascript and Python.</p></li>
-            <li > <p class=" ms-3 me-3">⭐My field of Interest's are building new  BlockChain, Web Technologies and Products and also in areas related to Mobile Application Development.</p></li>
-            <li > <p class=" ms-3 me-3">⭐Whenever possible, I also apply my passion for developing products with Node.js and Modern Javascript Library and Frameworks  like React.js and Next.js</p></li>
-            <li class="ms-5 ">
+            <li > <p class="  me-3">⭐I fell in love with programming and I have at least learnt something....</p></li>
+            <li > <p class="  me-3">⭐I am fluent in classics like C, Javascript and Python.</p></li>
+            <li > <p class="  me-3">⭐My field of Interest's are building new  BlockChain, Web Technologies and Products and also in areas related to Mobile Application Development.</p></li>
+            <li > <p class="  me-3">⭐Whenever possible, I also apply my passion for developing products with Node.js and Modern Javascript Library and Frameworks  like React.js and Next.js</p></li>
+            <li class="ms-2 ">
             <a class="me-3" href="https://github.com/Naveen-Gn" target="_blank"><img src="./Icons/github.png" height="35px"></a>
             <a class="me-3" href="https://www.linkedin.com/in/naveen-g-281356253" target="_blank"><img src="./Icons/317725_linkedin_social_icon.png" height="30px"></a>
             <a class="me-3" href="https://twitter.com/Naveen12gn" target="_blank" ><img src="./Icons/logo-twitter-png-47450.png" height="30px"></a>
