Project page adjacement

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
       <div class="card " style="width: 18rem; background-color: rgba(255,255,255,0.1); box-shadow: 0 2px 4px 0 rgba(0,0,0,.5); backdrop-filter: blur(10px);">
         <img src="./Images/portfolio.png" class="card-img-top" >
           <h5 class="text-center " style="color: lawngreen;font-family: 'Merienda', cursive;">My Portfolio</h5>
-          <button type="button" class="btn ps-4 pe-4 d-grid justify-content-center ms-auto me-auto" style="background-color: lawngreen; "><a href="https://github.com/Naveen-gn/My-portfolio" style="text-decoration: none; color: white; background-color: lawngreen;" target="_blank">View</a></button>
+          <button type="button" class="btn ps-4 pe-4 d-grid justify-content-center ms-auto me-auto" style="background-color: lawngreen; "><a href="https://naveen-g-portfolio.vercel.app/" style="text-decoration: none; color: white; background-color: lawngreen;" target="_blank">View</a></button>
       </div>
     </div>
     
