Insta link and resume changed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a class="me-3" href="https://github.com/Naveen-Gn" target="_blank"><img src="./Icons/github.png" height="35px"></a>
             <a class="me-3" href="https://www.linkedin.com/in/naveen-g-281356253" target="_blank"><img src="./Icons/317725_linkedin_social_icon.png" height="30px"></a>
             <a class="me-3" href="https://twitter.com/Naveen12gn" target="_blank" ><img src="./Icons/logo-twitter-png-47450.png" height="30px"></a>
-            <a class="me-3" href="https://www.instagram.com/_.n.a.ve.e.n._/" target="_blank"><img src="./Icons/3225191_app_instagram_logo_media_popular_icon.png" alt="" height="35px"></a>
+            <a class="me-3" href="https://www.instagram.com/luv_naveen.12/" target="_blank"><img src="./Icons/3225191_app_instagram_logo_media_popular_icon.png" alt="" height="35px"></a>
             <a class="me-3" href="https://www.facebook.com/profile.php?id=100022489606274" target="_blank"><img src="./Icons/5296499_fb_facebook_facebook logo_icon.png" height="35px"></a>
         </li>
           
@@ -382,7 +382,7 @@
       <div class="card " style="width: 18rem; ">
         <img src="./Images/portfolio.png" class="card-img-top" >
           <h5 class="text-center " style="color: rgb(242, 243, 244);font-family: 'Merienda', cursive;">My Portfolio</h5>
-          <button type="button" class="btn ps-4 pe-4 d-grid justify-content-center ms-auto me-auto" ><a href="https://github.com/Naveen-gn/My-portfolio" style="text-decoration: none; color: white;" target="_blank">View</a></button>
+          <button type="button" class="btn ps-4 pe-4 d-grid justify-content-center ms-auto me-auto" ><a href="https://github.com/Naveen-gn/My-Second-Portfolio" style="text-decoration: none; color: white;" target="_blank">View</a></button>
       </div>
     </div>
     
