--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 <!-- start of project page -->
 
-<div class="row Projects" ><h1 class="hello text-center mt-5 " style="color: rgb(242, 243, 244); ">My Projects</h1></div>
+<div id="Projects" class="row Projects" ><h1 class="hello text-center mt-5 " style="color: rgb(242, 243, 244); ">My Projects</h1></div>
 <div class="container-fluid mt-3">
 
   <div class="row ">
