--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container-fluid">
     <h1 class="navbar-brand  fs-3" style="color:rgb(133, 76, 230);">💜𝓝𝓪𝓿𝓮𝓮𝓷</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span style="color:rgb(133, 76, 230);"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+      <span ><svg xmlns="http://www.w3.org/2000/svg" width="35" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
         <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
       </svg> </span>
     </button>
@@ -92,9 +92,8 @@
 
   <!-- Start of home -->
   <div clas="container-fluid mt-5" id="home">
-    <div class="row  mt-5 ">
-
-      <div class="col-12 col-md-6 col-lg-6 mt-4 mt-sm-5 ">
+    <div class="row  mt-5 d-flex  flex-wrap-reverse ">
+      <div class="col-12 col-md-6 col-lg-6 mt-4 mt-sm-5 order-first">
         <span class="hello ms-3  fw-bolder  mt-sm-3" >Hello  <img src="./Icons/hi.png" class="hiimg" width="40px" height="40px"></span>
         <h1 class="iam ms-3"> <span id="iam2">I'm </span><span class="multiText"></span> </h1>
         <h1 class="hello ms-3 " style="color:rgb(242, 243, 244);">Let Me Introduce Myself✌🏻</h1>
