--- a/index.html
+++ b/index.html
@@ -485,15 +485,15 @@
 <!-- Script for download CV -->
 <script>
   document.getElementById('downloadButton').addEventListener('click', function() {
-      var pdfUrl = 'https://drive.google.com/file/d/1a9zVB6uSpe0zn_o3LHuqOC2lisaKVtww/view?usp=drive_link';
-      var a = document.createElement('a');
-      a.style.display = 'none';
-      a.href = pdfUrl;
-      a.download = 'Naveen-Resume.pdf';
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-  });
+    var pdfUrl = 'https://drive.google.com/file/d/1a9zVB6uSpe0zn_o3LHuqOC2lisaKVtww/view?usp=drive_link';
+    var a = document.createElement('a');
+    a.style.display = 'none';
+    a.href = pdfUrl;
+    a.target = '_blank';
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+});
 </script>
 <!-- End of Download script -->
 
